# RavenCoin-Wallet-With-Miners

./: LICENSE  README.md
Miners/: README.md  ccminer-x64-Options.txt  cpu-miner-raven.bat  cpuminer-Options.txt  gpu-miner-raven.bat  readme.txt
Miners/cpu/: cpu-miner-raven.bat
Miners/cpu/cpuminer-multi-rvn-source/algo/: timetravel.c
Miners/cpu/cpuminer-multi-rvn-windows/: cpu-miner-raven-donation.bat  cpu-miner-raven.bat  cpuminer-Options.txt
Miners/gpu/: ccminer-x64-Options.txt  gpu-miner-raven.bat
Miners/gpu/avermore-source/: Makefile.am  README.md  adl.c  adl.h  algorithm.c  algorithm.h  api.c  authors.md  config_parser.c  config_parser.h  configure.ac  donate.h  driver-opencl.c  findnonce.c  gbt-util.c  gbt-util.h  logging.h  miner.h  ocl.c  ocl.h  pool.c  pptable_v1_0.h  roadmap.md  sgminer.c  sysfs-gpu-controls.c  sysfs-gpu-controls.h  util.c  util.h
Miners/gpu/avermore-source/algorithm/: animecoin.c  bitblock.c  blake256.c  blake256.h  blakecoin.c  blakecoin.h  cn-aes-tbls.h  credits.c  credits.h  cryptonight.c  cryptonight.h  equihash.c  equihash.h  eth-sha3.c  eth-sha3.h  ethash.c  ethash.h  ethgencache.c  fresh.c  fuguecoin.c  groestlcoin.c  inkcoin.c  lyra2.c  lyra2.h  lyra2re.c  lyra2rev2.c  lyra2rev2.h  marucoin.c  myriadcoin-groestl.c  pluck.c  pluck.h  quarkcoin.c  qubitcoin.c  sifcoin.c  sponge.c  sponge.h  sysendian.h  talkcoin.c  twecoin.c  whirlcoin.c  (+12 more)
Miners/gpu/avermore-source/doc/: FAQ.md  configuration.md  cygwin-build.txt  windows-build.txt
Miners/gpu/avermore-source/kernel/: ethash-new.cl
Miners/gpu/avermore-source/sph/: Makefile.am  blake.c  haval.c  sha256_Y.c  sha256_Y.h  sph_blake.h  sph_haval.h
Miners/gpu/avermore-source/winbuild/: sgminer.sln  sgminer.vcxproj  sgminer.vcxproj.filters
Miners/gpu/avermore-windows/: example.bat
Miners/gpu/avermore-windows/kernel/: ethash.cl
Miners/gpu/ccminer-2.2.5-rvn-source/: README.txt  ccminer.vcxproj  ccminer.vcxproj.filters
Miners/gpu/ccminer-2.2.5-rvn-source/api/: index.php
Miners/gpu/ccminer-2.2.5-rvn-source/res/: ccminer.rc
Miners/gpu/ccminer-2.2.5-rvn-windows/: ccminer.conf  gpu-miner-raven-donation.bat  gpu-miner-raven.bat
Miners/gpu/ccminer-2.2.5-rvn-windows/api/: hwinfo.pl
Miners/gpu/ccminer-source/: Makefile.am  README.md  README.txt  ccminer.cpp  ccminer.sln  ccminer.vcxproj  ccminer.vcxproj.filters  configure.ac  miner.h
Miners/gpu/ccminer-source/api/: websocket.htm
Miners/gpu/ccminer-source/neoscrypt/: cuda_neoscrypt.cu
Miners/gpu/ccminer-source/res/: ccminer.rc
Miners/gpu/ccminer-source/x15/: cuda_x14_shabal512.cu  cuda_x15_whirlpool_sm3.cu  whirlpool.cu
Miners/gpu/ccminer-source/x16r/: cuda_x16r.h  cuda_x16r_echo.cu  x16r.cu
Miners/gpu/ccminer-source/x17/: cuda_x17_sha512.cu
Miners/gpu/nevermore-source/: Makefile.am  README.md  algos.h  bench.cpp  ccminer.cpp  ccminer.vcxproj  ccminer.vcxproj.filters  configure.ac  cuda_helper_alexis.h  cuda_vectors_alexis.h  donate.h  miner.h  pools.cpp  util.cpp
Miners/gpu/nevermore-source/Algo256/: cuda_keccak256.cu
Miners/gpu/nevermore-source/JHA/: cuda_jha_keccak512.cu
Miners/gpu/nevermore-source/quark/: cuda_quark_keccak512.cu
Miners/gpu/nevermore-source/res/: ccminer.rc  resource.h
Miners/gpu/nevermore-source/x11/: cuda_x11_aes_alexis.cuh  cuda_x11_echo_alexis.cu  (+2 more)
Miners/gpu/nevermore-windows/: README.txt  example.bat
Miners/gpu/suprminer-source/: .gitignore  Makefile.am  README.md  README.txt  ccminer.cpp  ccminer.vcxproj  ccminer.vcxproj.filters  configure.ac  cuda_helper.h  cuda_helper_alexis.h  cuda_vectors_alexis.h  cuda_vectors_alexis2.h  miner.h  polytimos.cu
Miners/gpu/suprminer-windows/: README.txt  mine_rvn.bat
Wallet/Darwin/: md5sum  sha256sum
Wallet/Linux/: raven-2.1.3.0-x86_64-linux-gnu.tar.gz.md5sum  raven-2.1.3.0-x86_64-linux-gnu.tar.gz.sha256sum
Wallet/Linux/centos_7/: README.md
Wallet/Linux/fedora/: README.md
Wallet/Linux/include/: ._ravenconsensus.h
Wallet/Linux/lib/: libravenconsensus.dylib  libravenconsensus.so.0
Wallet/Linux/ubuntu_16.04/: README.md
Wallet/Mac/: README.md  raven-2.1.3.0-osx.dmg.md5sum  raven-2.1.3.0-osx.dmg.sha256sum
Wallet/Wallet-Source/: README.md
Wallet/Wallet-Source/doc/: README_windows.txt
Wallet/Wallet-Source/src/: clientversion.cpp
Wallet/Wallet-Source/test/: README.md
Wallet/Windows/: README.md  md5sum  raven-2.1.3-win64-setup-signed.exe.md5sum  raven-2.1.3-win64-setup-signed.exe.sha256sum  sha256sum
(+46 files in other folders)
